changes to knn vs KNN etc

--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -109,10 +109,11 @@ that the accuracy estimates from the test data are reasonable. First, it
 **shuffles** the data before splitting. This ensures that any ordering present
 in the data does not influence the data that ends up in the training and testing sets.
 Second, it **stratifies** the data by the class label, to ensure that roughly
-the same proportion of each class ends up in both the training and testing sets. For example, if roughly 65% of the
-observations are from the benign class (`B`) and 35% are from the malignant class (`M`),
-then `initial_split` ensures that roughly 65% of the training data are benign, 
-35% of the training data are malignant,
+the same proportion of each class ends up in both the training and testing sets. For example,
+in our data set roughly 63% of the
+observations are from the benign class (`B`) and 37% are from the malignant class (`M`),
+so `initial_split` ensures that roughly 63% of the training data are benign, 
+37% of the training data are malignant,
 and the same proportions exist in the testing data.
 
 Let's use the `initial_split` function to create the training and testing sets.
@@ -270,7 +271,7 @@ confu22 <- (confusionmt %>% filter(name == "cell_2_2"))$value
 
 The confusion matrix shows `r confu11` observations were correctly predicted 
 as maligant, and `r confu22` were correctly predicted as benign. Therefore the classifier labelled 
-`r confu11`+`r confu22` = `r confu11+confu22` observations 
+`r confu11` + `r confu22` = `r confu11+confu22` observations 
 correctly. It also shows that the classifier made some mistakes; in particular,
 it classified  `r confu21` observations as benign when they were truly malignant,
 and `r confu12` observations as malignant when they were truly benign. 
@@ -732,7 +733,7 @@ to the new observation, and then returning the majority class vote from those
 training observations. We can evaluate a classifier by splitting the data
 randomly into a training and test data set, using the training set to build the
 classifier, and using the test set to estimate its accuracy. Finally, we
-can tune the classifier (e.g., select the number of neighbours $K$ in $K$-nn)
+can tune the classifier (e.g., select the number of neighbours $K$ in $K$-NN)
 by maximizing estimated accuracy via cross-validation. This 
 process is summarized in Figure \@ref(fig:06-overview).
 
@@ -806,7 +807,7 @@ cancer_irrelevant %>%
       select(Class, Smoothness, Concavity, Perimeter, Irrelevant1, Irrelevant2)
 ```
 
-Next, we build a sequence of $K$-nn classifiers that include `Smoothness`,
+Next, we build a sequence of $K$-NN classifiers that include `Smoothness`,
 `Concavity`, and `Perimeter` as predictor variables, but also increasingly many irrelevant
 variables. In particular we create 6 datasets with 0, 5, 10, 15, 20, and 40 irrelevant predictors.
 Then we build a model, tuned via 5-fold cross-validation, for each data set.
@@ -950,7 +951,7 @@ In particular, you
 2. tune each one using cross validation
 3. pick the subset of predictors that gives you the highest cross-validation accuracy  
 
-Best subset selection is applicable to any  classification method ($K$-nn or otherwise).
+Best subset selection is applicable to any  classification method ($K$-NN or otherwise).
 However, it becomes very slow when you have even a moderate
 number of predictors to choose from (say, around 10). This is because the number of possible predictor subsets
 grows very quickly with the number of predictors, and you have to train the model (itself
@@ -1037,7 +1038,7 @@ one over increasing predictor set sizes
 and another to check which predictor to add in each round (where you see `for (j in 1:length(names))` below).
 For each set of predictors to try, we construct a model formula,
 pass it into a `recipe`, build a `workflow` that tunes
-a $K$-nn classifier using 5-fold cross-validation, 
+a $K$-NN classifier using 5-fold cross-validation, 
 and finally records the estimated accuracy.
 
 ```{r 06-fwdsel-2, warning = FALSE}
